--- a/LoginApplication/appsettings.json
+++ b/LoginApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Data Source=192.168.0.110;Initial Catalog=Codefirst;User ID=sa;Password=Password1;Connect Timeout=30;Persist Security Info=False;"
+  }
 }
